--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
-*.sw?		    # Vim swap files
-assignment/	    # the assignment is Copyright Durham University
+# Vim swap files
+.*.sw?
+
+# the assignment is Copyright Durham University
+assignment/
+
+# other things that we either don't own Copyright for, or should be better
+# included by reference
+contrib/
+
+*.class
+*.ctxt
+*.bluej
