Report: Clean up the report used as a template; now we have a really minimal report for this assignment (with about 2 lines of text).  Clean up bibliography, Makefile, TeX source, images.

--- a/report/.gitignore
+++ b/report/.gitignore
@@ -3,7 +3,8 @@ schemaspy
 *.bbl
 *.blg
 *.log
-computer-systems-databases-michaelmas-2010-summative.pdf
+software-applications-ai-search-michaelmas-2011-summative.pdf
+software-applications-ai-search-michaelmas-2011-summative.ps
 
 # On branch master
 # Changes to be committed:
