--- a/report/Makefile
+++ b/report/Makefile
@@ -15,7 +15,7 @@
 #   with this program; if not, write to the Free Software Foundation, Inc.,
 #   51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 
-LATEX = latex
+LATEX = latex -interaction=batchmode
 BIBTEX = bibtex
 BASE = software-applications-ai-search-michaelmas-2011-summative
 TEX_FILE = $(BASE).tex
